Simplified parsing of doubles